fix: cards on mobile.

--- a/astro/src/styles/components/layout.css
+++ b/astro/src/styles/components/layout.css
@@ -1,5 +1,5 @@
 main {
-  padding: 65px;
+  padding: 65px 0px 65px;
 }
 
 .container {
